--- a/src/components/menu-item/menu-item.styles.sass
+++ b/src/components/menu-item/menu-item.styles.sass
@@ -1,16 +1,3 @@
-.homepage   
-  display: flex  
-  flex-direction: column  
-  align-items: center  
-  padding: 20px 80px  
-  
-
-.directory-menu   
-  width: 100%  
-  display: flex  
-  flex-wrap: wrap  
-  justify-content: space-between  
-  
 
 .menu-item   
   min-width: 30%  
@@ -21,6 +8,10 @@
   justify-content: center  
   border: 1px solid black  
   margin: 0 7.5px 15px  
+  background-position: center
+  background-size: cover
+  &.large
+    height: 380px
 
   &:first-child   
     margin-right: 7.5px  
@@ -38,17 +29,20 @@
     align-items: center  
     justify-content: center  
     border: 1px solid black  
-
+    background-color: #fff
+    opacity: 0.7    
     .title   
       font-weight: bold  
       margin-bottom: 6px  
       font-size: 22px  
       color: #4a4a4a  
-      
+      line-height: 0.5
 
     .subtitle   
       font-weight: lighter  
       font-size: 16px  
       
-    
+.background-image
+  width: 100%
+  height: 100%    
   
