--- a/src/components/menu-item/menu-item.styles.sass
+++ b/src/components/menu-item/menu-item.styles.sass
@@ -10,6 +10,14 @@
   margin: 0 7.5px 15px  
   background-position: center
   background-size: cover
+  overflow: hidden
+  &:hover
+    cursor: pointer
+    & .background-image
+        transform: scale(1.1)
+        transition: transform 6s cubic-bezier(0.25,0.45,0.45,0.95)
+    & .content
+        opacity: 0.9
   &.large
     height: 380px
 
@@ -30,7 +38,8 @@
     justify-content: center  
     border: 1px solid black  
     background-color: #fff
-    opacity: 0.7    
+    opacity: 0.7  
+    position: absolute  
     .title   
       font-weight: bold  
       margin-bottom: 6px  
