--- a/src/components/custom-button/custom-button.styles.sass
+++ b/src/components/custom-button/custom-button.styles.sass
@@ -13,6 +13,9 @@
   font-weight: bolder 
   border: none 
   cursor: pointer 
+  display: flex
+  justify-content: center
+  
 
   &:hover  
     background-color: white 
@@ -24,6 +27,13 @@
     &:hover
       background-color: #357ae8
       border: none
-
+  &.inverted
+    background-color: #fff
+    color: #000
+    border: 1px solid #000
+    &:hover
+      background-color: #000
+      color: #ffffff
+      border: none
    
  
